<resources>
    <string name="app_name">Gallery</string>
    <string name="transition_name">name%1$d</string>

    <string name="preference_animation">Animations</string>
    <string name="preference_animation_description">You can turn off animations for optimization.</string>
    <string name="preference_theme">Dark theme</string>
    <string name="preference_theme_description">You can choose a theme.</string>
    <string name="preference_caching">Caching</string>
    <string name="preference_caching_description">Saving images in memory. Disabling will decrease the space occupied by the application, but increase the load time.</string>

    <string name="menu_selectAll">Select all</string>
    <string name="menu_offSelectAll">Clear selection</string>
    <string name="menu_createAlbum">Combine in album</string>
    <string name="menu_selectLove">Select favorite</string>
    <string name="menu_info">Information</string>
    <string name="menu_wallpaper">Use as wallpaper</string>
    <string name="menu_move">Move</string>

    <string name="tab_images">images</string>
    <string name="tab_albums">albums</string>
    <string name="tab_preference">preference</string>

    <string name="file_info_path">Path : </string>
    <string name="file_info_change_date">Changed : </string>
    <string name="file_info_resolution">Resolution : </string>
    <string name="file_info_weight">Weight : </string>

    <string name="create_album_dialog_album">Album</string>
    <string name="create_album_dialog_cancel">cancel</string>
    <string name="create_album_dialog_ok">ok</string>

    <string name="create_folder_dialog_createNewFolder">Creating a new album</string>

    <string name="create_folder_status_move_image">Images moved : </string>
    <string name="status_deleted_image">Images deletes : </string>
    <string name="create_folder_status_sync_image">Images synchronized :  </string>

    <string name="setting_wallpaper_successful">Wallpaper set</string>
    <string name="setting_wallpaper_fail">Failed to set wallpaper</string>

    <string name="bytes">B</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>

    <string name="delete_image_confirmation">Are you sure you want to delete the image?</string>
    <string name="delete_images_confirmation">Are you sure you want to delete the images?</string>

    <string name="album_name">Album title</string>

    <string name="select_image_for_delete">"Select the images you want to delete."</string>
    <string name="enter_album_name">Enter album name.</string>

    <string name="delete">delete</string>

    <string name="create_album">Create album</string>
    <string name="deleting_image">"Images deleting "</string>

</resources>